kubernetes/apps/automation/zigbee2mqtt/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
  namespace: z2m
  labels:
    app.kubernetes.io/instance: "zigbee2mqtt"
    app.kubernetes.io/name: "zigbee2mqtt"
spec:
  type: ClusterIP
  selector:
    app: zigbee2mqtt
  ports:
    - name: http
      port: 8080
      targetPort: web
      protocol: TCP
