kubernetes/apps/automation/zigbee2mqtt/app/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zigbee2mqtt
spec:
  hostnames:
    - "z2m.internal.${SECRET_DOMAIN}"
    - "zigbee2mqtt.internal.${SECRET_DOMAIN}"
  parentRefs:
    - name: internal
      namespace: network
  rules:
    - backendRefs:
        - kind: Service
          name: zigbee2mqtt
          port: 8080
